--- a/src/components/Game/GameBorder/GameBorder.scss
+++ b/src/components/Game/GameBorder/GameBorder.scss
@@ -54,6 +54,8 @@
     width: 100%;
     flex: 1 1 auto;
     flex-flow: column;
+    min-height: 0;
+
     @media (min-width: 600px) {
       flex-flow: row;
     }
@@ -62,25 +64,35 @@
       display: flex;
       justify-content: center;
       box-sizing: border-box;
+      flex: 0 0 auto;
 
       @media (min-width: 600px) {
         position: unset;
         width: 400px;
         margin-left: 2%;
+        flex: unset;
       }
 
       .master-black-card {
-        font-size: 0.6em;
-        flex-shrink: 1;
-        flex-grow: 1;
+        flex-grow: 0;
+        flex-shrink: 0;
         align-self: flex-start;
+        width: 38vw;
+        max-width: 190px;
+        font-size: 0.7em;
 
         @media (min-width: 400px) {
+          width: 42vw;
+          max-width: 210px;
           font-size: 0.8em;
         }
 
         @media (min-width: 600px) {
           font-size: unset;
+          flex-grow: 1;
+          flex-shrink: 1;
+          width: auto;
+          max-width: unset;
           flex-basis: calc(100vh * 0.22);
         }
       }
@@ -89,18 +101,17 @@
 
   .game-container-children-wrapper {
     flex: 1 1 auto;
-    padding: 0 2%;
-    height: 100%;
+    min-height: 0;
     display: flex;
     justify-content: center;
     width: 100%;
-    // max-height: 45vh;
+    overflow: auto;
     margin-top: 2%;
     padding: 0;
+
     @media (min-width: 600px) {
       margin-top: 0%;
       padding: 0 2%;
-      // max-height: 65vh;
     }
   }
 
@@ -116,11 +127,13 @@
     flex-shrink: 1;
     width: 100%;
     overflow: auto;
-    // display: none;
     position: absolute;
-    bottom: 0.5%;
+    top: 44px;
+    right: 0;
     display: flex;
-    padding-top: 10%;
+    padding: 4px 8px;
+    pointer-events: none;
+    justify-content: flex-end;
 
     @media (min-width: 600px) {
       padding: 0;
@@ -129,9 +142,12 @@
       width: 15%;
       justify-content: unset;
       bottom: unset;
+      top: unset;
+      right: unset;
       position: unset;
       display: block;
       height: 100%;
+      pointer-events: auto;
     }
   }
 }
